--- a/Step1-Data/Untitled.ipynb
+++ b/Step1-Data/Untitled.ipynb
@@ -1,11 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scraping Data from Single Name\n",
+    "\n",
+    "In this notebook, we will be exploring how to efficiently download the data we need from the company filings. Since there are \\>1000 names, storing all the filings in their entirety may take up a lot of space, so it may be better to only keep the information that we need. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from faker import Faker"
+   ]
   }
  ],
  "metadata": {
