continued working on parsing

--- a/Step1-Data/2-edgar_scrape.ipynb
+++ b/Step1-Data/2-edgar_scrape.ipynb
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,14 +955,14 @@
     "heads = {#'Host': 'www.sec.gov', \n",
     "         #'Connection': 'close',\n",
     "         #'Accept': 'application/json',#, text/javascript, */*; q=0.01', \n",
-    "         #'X-Requested-With': 'XMLHttpRequest',\n",
+    "         'X-Requested-With': 'XMLHttpRequest',\n",
     "         'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.163 Safari/537.36',\n",
     "         }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
