baseline (or pre-baseline) completed

--- a/Step1-Data/2-edgar_scrape.ipynb
+++ b/Step1-Data/2-edgar_scrape.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[5 rows x 1110 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,20 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get all 10-K filings for AAPL from 2000 onwards\n",
     "#dl.get(\"10-K\", \"AAPL\", after=\"2000-01-01\")"
@@ -332,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +330,7 @@
        "['10-K']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +441,7 @@
        "4    40545     GE  GENERAL ELECTRIC CO"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +462,7 @@
        "1110"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,16 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "417"
+       "405"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +581,7 @@
        "4  ASIA AUTOMOTIVE ACQUISITION CO  AAACU  04519K200  1332552.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +672,7 @@
        "132         ABBVIE INC COM STK (DE)   ABBV  00287Y109  1551152.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +693,7 @@
        "146"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +720,7 @@
        "85"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,150 +740,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Issuer</th>\n",
-       "      <th>Ticker</th>\n",
-       "      <th>CUSIP</th>\n",
-       "      <th>CIK</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>AMERICAN AIRLINES GROUP INC CO</td>\n",
-       "      <td>AAL</td>\n",
-       "      <td>02376R102</td>\n",
-       "      <td>6201.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>ADVANCE AUTO PARTS INC</td>\n",
-       "      <td>AAP</td>\n",
-       "      <td>00751Y106</td>\n",
-       "      <td>1158449.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>APPLE INC;COM NPV</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>037833100</td>\n",
-       "      <td>320193.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>ABBVIE INC COM STK (DE)</td>\n",
-       "      <td>ABBV</td>\n",
-       "      <td>00287Y109</td>\n",
-       "      <td>1551152.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>AMERISOURCEBERGEN CORP</td>\n",
-       "      <td>ABC</td>\n",
-       "      <td>03073E105</td>\n",
-       "      <td>1140859.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39111</th>\n",
-       "      <td>YRC WORLDWIDE INC COMMON</td>\n",
-       "      <td>YRCW</td>\n",
-       "      <td>984249607</td>\n",
-       "      <td>716006.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39142</th>\n",
-       "      <td>YUM BRANDS, INC</td>\n",
-       "      <td>YUM</td>\n",
-       "      <td>988498101</td>\n",
-       "      <td>1041061.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39186</th>\n",
-       "      <td>ZEBRA TECHNOLOGIES CORP CL-A</td>\n",
-       "      <td>ZBRA</td>\n",
-       "      <td>989207105</td>\n",
-       "      <td>877212.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39240</th>\n",
-       "      <td>ZIONS BANCORP</td>\n",
-       "      <td>ZION</td>\n",
-       "      <td>989701107</td>\n",
-       "      <td>109380.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39359</th>\n",
-       "      <td>ZOETIS INC. CLASS A COM STK</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>98978V103</td>\n",
-       "      <td>1555280.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>879 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               Issuer Ticker      CUSIP        CIK\n",
-       "55     AMERICAN AIRLINES GROUP INC CO    AAL  02376R102     6201.0\n",
-       "80             ADVANCE AUTO PARTS INC    AAP  00751Y106  1158449.0\n",
-       "84                  APPLE INC;COM NPV   AAPL  037833100   320193.0\n",
-       "132           ABBVIE INC COM STK (DE)   ABBV  00287Y109  1551152.0\n",
-       "134            AMERISOURCEBERGEN CORP    ABC  03073E105  1140859.0\n",
-       "...                               ...    ...        ...        ...\n",
-       "39111        YRC WORLDWIDE INC COMMON   YRCW  984249607   716006.0\n",
-       "39142                 YUM BRANDS, INC    YUM  988498101  1041061.0\n",
-       "39186    ZEBRA TECHNOLOGIES CORP CL-A   ZBRA  989207105   877212.0\n",
-       "39240                   ZIONS BANCORP   ZION  989701107   109380.0\n",
-       "39359     ZOETIS INC. CLASS A COM STK    ZTS  98978V103  1555280.0\n",
-       "\n",
-       "[879 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "valid_tickers"
+    "valid_tickers.to_csv('1-valid_tickers.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
