--- a/Step1-Data/3-document_segmentation.ipynb
+++ b/Step1-Data/3-document_segmentation.ipynb
@@ -18134,7 +18134,7 @@
     "    \n",
     "    now = datetime.now()\n",
     "    print(counter, ' - ', now.strftime(\"%H:%M:%S\"))\n",
-    "    \n",
+    "    item1b_company = []\n",
     "    item7_company = []\n",
     "    for link in link_dict[company]['Link'].values:\n",
     "        try:\n",
@@ -18147,16 +18147,30 @@
     "        rawText = parser.from_file('out.pdf')\n",
     "        rawList = rawText['content'].splitlines()\n",
     "        result = [x for x in rawList if re.match('ITEM', x[:4], re.IGNORECASE)]\n",
+    "        \n",
+    "        try:\n",
+    "            ##### ITEM 1A\n",
+    "            matches = re.compile(r'^ITEM.*1(A| A)', re.IGNORECASE)\n",
+    "            #item7 = [matches.search(x) for x in result]\n",
+    "            idx1a = rawList.index([x for x in rawList if matches.search(x) != None][-1])\n",
+    "\n",
+    "            ##### ITEM 1B\n",
+    "            matches = re.compile(r'^ITEM.*1(B| B)', re.IGNORECASE)\n",
+    "            #item7 = [matches.search(x) for x in result]\n",
+    "            idx1b = rawList.index([x for x in rawList if matches.search(x) != None][-1])\n",
+    "        \n",
+    "        \n",
     "\n",
     "        try:\n",
+    "            \n",
     "            ##### ITEM 7\n",
     "            matches = re.compile(r'^ITEM.*7[^A][^A]', re.IGNORECASE)\n",
-    "            item7 = [matches.search(x) for x in result]\n",
+    "            #item7 = [matches.search(x) for x in result]\n",
     "            idx7 = rawList.index([x for x in rawList if matches.search(x) != None][-1])\n",
     "\n",
     "            ##### ITEM 8\n",
     "            matches = re.compile(r'^ITEM.*8[^B][^B]', re.IGNORECASE)\n",
-    "            item7 = [matches.search(x) for x in result]\n",
+    "            #item7 = [matches.search(x) for x in result]\n",
     "            idx8 = rawList.index([x for x in rawList if matches.search(x) != None][-1])\n",
     "\n",
     "            item7_company.append(' '.join(rawList[idx7:idx8]).replace('\\t', ' '))\n",
@@ -18166,7 +18180,7 @@
     "    link_dict[company]['Item7'] = item7_company\n",
     "    \n",
     "    if counter % 50 == 0:\n",
-    "        with open('4-link_dict.pickle', 'wb') as handle:\n",
+    "        with open('6-link_dict.pickle', 'wb') as handle:\n",
     "            pickle.dump(link_dict, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "        \n",
     "    counter += 1"
