--- a/Step3-Portfolio_Construction/1-Cosine_Similarity.ipynb
+++ b/Step3-Portfolio_Construction/1-Cosine_Similarity.ipynb
@@ -18414,6 +18414,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 393,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stringa = pd.read_csv('Book1.csv', header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 405,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#a = pd.read_csv(input_file_name)\n",
+    "stringa.columns = ['id', 'area', 'name', 'quantity', 'brand']\n",
+    "df1 = (stringa.loc[:,['name', 'quantity']].groupby('name').sum() / len(stringa)).sort_values(by='quantity',ascending=False)\n",
+    "df2 = stringa.loc[:,['name', 'brand']].groupby('name').agg(lambda x: x.value_counts().index[0])\n",
+    "\n",
+    "#df1.to_csv('0_'+input_file_name)\n",
+    "#df2.to_csv('1_'+input_file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 403,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>shoes</th>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>forks</th>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       quantity\n",
+       "name           \n",
+       "shoes      2.00\n",
+       "forks      0.75"
+      ]
+     },
+     "execution_count": 403,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>brand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>shoes</td>\n",
+       "      <td>Air</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>forks</td>\n",
+       "      <td>Pfitzcraft</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name       brand\n",
+       "0  shoes         Air\n",
+       "1  forks  Pfitzcraft"
+      ]
+     },
+     "execution_count": 410,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.iloc[::-1].reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
