Added final presentation, working on cleaning up code

--- a/Step1-Data/2-edgar_scrape.ipynb
+++ b/Step1-Data/2-edgar_scrape.ipynb
@@ -11,27 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting sec_api\n",
-      "  Downloading https://files.pythonhosted.org/packages/d0/62/69f224113b3762f114e14a461c8e74058f37758399107410ea6b8a0f1810/sec_api-1.0.4-py3-none-any.whl\n",
-      "Requirement already satisfied: requests in /Users/lucaskrenn/opt/anaconda3/lib/python3.7/site-packages (from sec_api) (2.22.0)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/lucaskrenn/opt/anaconda3/lib/python3.7/site-packages (from requests->sec_api) (2.8)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/lucaskrenn/opt/anaconda3/lib/python3.7/site-packages (from requests->sec_api) (2020.12.5)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/lucaskrenn/opt/anaconda3/lib/python3.7/site-packages (from requests->sec_api) (3.0.4)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /Users/lucaskrenn/opt/anaconda3/lib/python3.7/site-packages (from requests->sec_api) (1.24.2)\n",
-      "Installing collected packages: sec-api\n",
-      "Successfully installed sec-api-1.0.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install sec_api"
+    "#!pip install sec_api"
    ]
   },
   {
@@ -43,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +36,16 @@
     "import pickle\n",
     "import h5py\n",
     "\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
     "from bs4 import BeautifulSoup\n",
     "from sec_edgar_downloader import Downloader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +236,7 @@
        "[5 rows x 1110 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,92 +251,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pulling Data From One Company"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The company ticker can be used to scrape the data. I will demonstrate a quick example (Apple) prior to downloading the full list of companies:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sec_api import QueryApi\n",
-    "\n",
-    "# queryApi = QueryApi(api_key=\"7891993a3f23d1873bccf4d48fd4e4571c9af3cefe758e650f2efb8e0bc5cdba\")\n",
-    "\n",
-    "# query = {\n",
-    "#     \"query\": {\n",
-    "#         \"query_string\": {\n",
-    "#             \"query\": \"cik:1176334, 1413898, 99780 AND formType:\\\"10-K\\\"\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"from\": \"0\",\n",
-    "#     \"size\": \"10\",\n",
-    "#     \"sort\": [{ \"filedAt\": { \"order\": \"desc\" } }]\n",
-    "# }\n",
-    "\n",
-    "# filings = queryApi.get_filings(query)\n",
-    "\n",
-    "# print(filings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dl = Downloader()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get all 10-K filings for AAPL from 2000 onwards\n",
-    "#dl.get(\"10-K\", \"AAPL\", after=\"2000-01-01\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['10-K']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir(\"sec-edgar-filings/AAPL\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can see here that in the file created by the package, company documents are organized by their tickers, even though the CIK was used in the request. This will be handy in the backtesting phase."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Pulling Data From All Companies\n",
     "\n",
     "Now, we will pull the data from all the companies found in the .csv file."
@@ -357,18 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import json\n",
     "response = json.loads(requests.get(\"https://www.sec.gov/files/company_tickers.json\").text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -424,24 +323,24 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>40545</td>\n",
-       "      <td>GE</td>\n",
-       "      <td>GENERAL ELECTRIC CO</td>\n",
+       "      <td>1326801</td>\n",
+       "      <td>FB</td>\n",
+       "      <td>Facebook Inc</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   cik_str ticker                title\n",
-       "0   320193   AAPL           Apple Inc.\n",
-       "1   789019   MSFT       MICROSOFT CORP\n",
-       "2  1652044   GOOG        Alphabet Inc.\n",
-       "3  1018724   AMZN       AMAZON COM INC\n",
-       "4    40545     GE  GENERAL ELECTRIC CO"
+       "   cik_str ticker           title\n",
+       "0   320193   AAPL      Apple Inc.\n",
+       "1   789019   MSFT  MICROSOFT CORP\n",
+       "2  1652044   GOOG   Alphabet Inc.\n",
+       "3  1018724   AMZN  AMAZON COM INC\n",
+       "4  1326801     FB    Facebook Inc"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +361,7 @@
        "1110"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,16 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "405"
+       "413"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +480,7 @@
        "4  ASIA AUTOMOTIVE ACQUISITION CO  AAACU  04519K200  1332552.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +571,7 @@
        "132         ABBVIE INC COM STK (DE)   ABBV  00287Y109  1551152.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +592,7 @@
        "146"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +619,7 @@
        "85"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -751,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
